# BornHack-Cyberegg

./: .gitignore  .gitmodules  .woodpecker.yml  CHANGELOG-2026-07-14-to-16.md  CLOCK.md  CONTACTS_SCREEN.md  Cargo.toml  FEATURES.html  GAME.md  GAMES.md  HWTEST.md  LUT.md  License.md  MACOS_SETUP.md  Makefile  NFC_README.md  PEOPLE_SCREEN.md  POCKET_CARD.md  QUICKSTART.md  README.md  USER_GAMES.md  USER_NFC.md  USER_WATCH.md  build.rs  memory-hwtest.x  memory.x  out.txt  rick.mid  rust-analyzer.toml
.cargo/: config.toml
assets/: bornpets-sponsors-cat.json5  bornpets-sponsors.json5  sponsors.json5
assets/to-badge/: 002300.PCX  002301.PCX  002400.PCX  002800.PCX  010000.PCX  010100.PCX  010101.PCX  010200.PCX  010201.PCX  010300.PCX  010400.PCX  010401.PCX  010500.PCX  010501.PCX  010600.PCX  010601.PCX  010700.PCX  010800.PCX  010801.PCX  010900.PCX  010901.PCX  010A00.PCX  010A01.PCX  010B00.PCX  010B01.PCX  010C00.PCX  010C01.PCX  010D00.PCX  010D01.PCX  010E00.PCX  010E01.PCX  010F00.PCX  010F02.PCX  010F03.PCX  011000.PCX  011001.PCX  011100.PCX  011200.PCX  011300.PCX  011403.PCX  (+86 more)
bootloader/: Cargo.toml  README.md  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: board.rs  dfu.rs  main.rs
scripts/: 99-cyberaegg.rules  bl_factory.py  copy_assets.py  png_to_badge_pcx.py  strip_ics.py
src/: date_picker.rs  lib.rs  lut_file.rs  menu.rs  nfc_ndef.rs  signed_channel.rs  text_entry.rs  toast.rs  ui.rs
src/fw/: battery.rs  ble.rs  board.rs  bonds.rs  bornpets_cfg.rs  button.rs  channels.rs  config.rs  contacts.rs  device_id.rs  device_identity.rs  emoji.rs  epd.rs  factory_test.rs  fat12.rs  flash.rs  iso14443.rs  kv.rs  (+13 more)
tests/: flash_concurrency.rs  game_engine.rs
(+58 files in other folders)
