[package]
edition = "2024"
name = "nrf-aegg-bootloader"
version = "0.1.0"
description = "Bootloader for nRF chips"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embassy-nrf = { version = "0.9.0", features = ["nrf52840", "time-driver-rtc1"] }
embassy-boot-nrf = { version = "0.10.0" }
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
embassy-sync = { version = "0.7" }
cortex-m-rt = { version = "0.7" }
cfg-if = "1.0.0"
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
], optional = true }

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-nrf/defmt",
    "embassy-nrf/defmt",
]
# softdevice = [
#     "embassy-boot-nrf/softdevice",
# ]
nrf54 = []

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[package.metadata.embassy]
build = [
    { target = "thumbv7em-none-eabi", features = [
        "embassy-nrf/nrf52840",
    ] },
]
